--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ go:
     - 1.4
     - tip
 install:
-    go get github.com/tools/godep
-    godep restore
+  - export GOPATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace:$GOPATH"
+  - export PATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace/bin:$PATH"
