Changed bad config variable naming
Signed-off-by: Raffaele Di Fazio <raffaele.di.fazio@zalando.de>

--- a/docs/configurations/chimp-server/config.yaml
+++ b/docs/configurations/chimp-server/config.yaml
@@ -4,7 +4,7 @@ endpoint: http://10.10.0.1:8080,10.0.0.2:8080,10.0.0.3:8080
 fluentdEnabled: true
 debugEnabled: true
 oauth2Enabled: true
-TeamAuthorization: 0
+AuthorizationType: 0
 authURL:  https://token.auth.zalando.com/access_token
 tokenURL: https://auth.zalando.com/z/oauth2/tokeninfo
 tlsCertfilePath: /path/to/your/certfile
