Modified doc for newer file.
Signed-off-by: Raffaele Di Fazio <raffaele.di.fazio@zalando.de>

--- a/docs/input.yaml
+++ b/docs/input.yaml
@@ -1,13 +1,16 @@
 ---
-name: demo
-imageURL: YOUR_IMAGE
-replicas: 3
-ports: 
-  - 8080
-CPULimit: 1
-MemoryLimit: 4000MB
-force: true
-env:
-  MYENVVAR: "test"
-
-
+DeployRequest:
+  - name: demo
+    imageURL: YOUR_IMAGE
+    replicas: 3
+    ports:
+      - 8080
+    CPULimit: 1
+    MemoryLimit: 4000MB
+    force: true
+    env:
+      MYENVVAR: "test"
+    volumes:
+        - hostPath: /etc/chimp-server/config.yaml
+          containerPath: /etc/chimp-server/config.yaml
+          mode: "RO"
