--- a/docs/configurations/chimp-server/config.yaml
+++ b/docs/configurations/chimp-server/config.yaml
@@ -19,3 +19,4 @@ AuthorizedTeams:
   - Realm: teams
     Uid: Techmonkeys
     Cn: Platform Engineering / System
+EndpointPattern: https://%s.lb.zalando.net
